# Peer-Grading-Repo-archived

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: workflows
.github/workflows/: compute_weekly.yml
PeerGrading/Input/: ExReview.docx  forms_responses.xlsx
PeerGrading/Input/form_exports/: form_exports.csv  forms_responses.xlsx
PeerGrading/Input/students_db/: StudentListDB.xlsx
PeerGrading/Input/week_setup/: week_windows.csv
PeerGrading/Output/: attendance_W01.csv  attendance_W02.csv  attendance_W03.csv  attendance_W04.csv  attendance_W05.csv  attendance_W06.csv  attendance_W08.csv  attendance_W09.csv  attendance_W10.csv  attendance_W11.csv  attendance_W13.csv  peer_log_W01.csv  peer_log_W02.csv  peer_log_W03.csv  peer_log_W04.csv  peer_log_W05.csv  peer_log_W06.csv  peer_log_W08.csv  peer_log_W09.csv  peer_log_W10.csv  peer_log_W11.csv  peer_log_W13.csv  weekly_summary_ALL.csv  weekly_summary_W01.csv  weekly_summary_W02.csv  weekly_summary_W03.csv  weekly_summary_W04.csv  weekly_summary_W05.csv  weekly_summary_W06.csv  weekly_summary_W08.csv  weekly_summary_W09.csv  weekly_summary_W10.csv  weekly_summary_W11.csv  weekly_summary_W13.csv
PeerGrading/Output/master/: grade_edges.csv  grade_matrix_count.csv  grade_matrix_mean.csv
config/: forms_mapping.yaml  rubric.yaml
data/example/: forms_example.xlsx  presentations_example.csv  students_example.csv
scripts/: compute_weekly.py  run_pipeline.py
src/peergrading/: compute.py  io.py  pipeline.py  utils.py
src/peergrading.egg-info/: PKG-INFO  SOURCES.txt
(+68 files in other folders)
